eperiments with graphQL

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,4 +1,5 @@
-$color_main: #f04e30;
+$color_main: #24b78d;
+$color_bg: #243743;
 $color_border: #e3e3e3;
 $color_text: #505457;
 $color_light_text: #7f8a8e;
