--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
 @import 'settings';
 @import 'mixins/mixins';
+@import 'mixins/media-queries';
+@import 'mixins/misc';
 @import 'bootstrap';
 @import 'global';
 @import 'typography';
