--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,5 +1,8 @@
 body {
-    font-family: "Helvetica", "Arial", sans-serif;
-    font-size: 20px;
-    color: $color_text;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  font-size: 20px;
+  color: $color_text;
+  a {
+    color: $color_main;
+  }
 }
